# rust-apiclient

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: rust.yml
c-wrapper/: .gitignore  Cargo.toml  build.rs
c-wrapper/c-examples/: .gitignore
c-wrapper/c-examples/challenge_response/: Makefile  Makefile.darwin  build.mk  challenge_response.c
c-wrapper/c-examples/challenge_response/wiremock/mappings/: challenge_response.json  discovery_verification.json  new_session.json
c-wrapper/src/: lib.rs
examples/: challenge_response.rs
rust-client/: Cargo.toml
rust-client/examples/: challenge_response.rs
rust-client/src/: lib.rs
src/: coserv.rs  http.rs  lib.rs
test/coserv/: example_query.cbor  example_query.diag
