[package]
name = "veraison-apiclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
url = { version = "2", features = ["serde"] }
base64 = "0.13.0"
thiserror = "1"
serde = "1.0.144"
chrono = "0.4"

[dependencies.serde_with]
version = "1.14.0"
features = [ "base64", "chrono" ]