[package]
name = "veraison-apiclient"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/veraison/rust-apiclient"
readme = "README.md"
description = "client API for Veraison"
license = "Apache-2.0"
keywords = ["attestation", "verification", "veraison"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
reqwest-middleware = "0.5.1"
http-cache-reqwest = { version = "1.0.0-alpha.2" }
url = { version = "2", features = ["serde"] }
base64 = "0.22.1"
thiserror = "2.0.6"
serde = "1.0.216"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
jsonwebkey = { version = "0.3.5", features = ["pkcs-convert"] }
tokio = { version = "1.43.0", features = ["full"] }
coserv-rs = { git = "https://github.com/veraison/coserv-rs.git" }
ciborium = { version = "^0.2" }
mediatype = "0.21.0"
uritemplate-next = "0.2.0"

[features]
memory-caching = [ "http-cache-reqwest/manager-moka" ]
disk-caching = [ "http-cache-reqwest/manager-cacache" ]

[dependencies.serde_with]
version = "3.14.0"
features = ["base64", "chrono"]

[dev-dependencies]
wiremock = "=0.6.2"
async-std = { version = "1.6.5", features = ["attributes", "tokio1"] }
tempfile = "3.26.0"
